--- a/src/css/pages/style.css
+++ b/src/css/pages/style.css
@@ -1,5 +1,5 @@
-/* Police d'écriture Rubik - Extra Bold */
-@import url('https://fonts.googleapis.com/css2?family=Rubik:wght@800&display=swap');
+/* Police d'écriture Rubik - Extra Bold / Regular */
+@import url('https://fonts.googleapis.com/css2?family=Rubik:wght@400;800&display=swap');
 /* Police d'écriture Mulish - Extra Bold / Bold / Regular */
 @import url('https://fonts.googleapis.com/css2?family=Mulish:wght@400;700;800&family=Rubik:wght@800&display=swap');
 
