--- a/src/css/base/media.css
+++ b/src/css/base/media.css
@@ -11,7 +11,7 @@ img {
 }
 
 .icone_mmi_footer {
-    display: block;
-    text-align: center;
+    display: flex;
+    justify-content: center;
     
 }
