--- a/src/css/utils/variables.css
+++ b/src/css/utils/variables.css
@@ -3,7 +3,7 @@
 --rouge-clair: #BE1C1C;
 --gris-fonce: #252424;
 --blanc: #FFFDFD;
---rouge-fonce-: #6E0D0D;
+--rouge-fonce-fonce: #6E0D0D;
 --rouge-fonce: #881010;
 
 /* Text-size styles */
