--- a/src/css/base/main.css
+++ b/src/css/base/main.css
@@ -4,8 +4,20 @@
 *::after {
     box-sizing: border-box;
 }
-/* Header */
 
-header {
-    background-color: var(--rouge-fonce);
+/* À propos */
+
+.round-header {
+    display: block;
+    margin: auto;
+}
+
+.h1-header {
+    display: block;
+    color: #FFFFFF;
+    font-family: 'Mulish', sans-serif;
+    font-weight: 800;
+    font-size: 28;
+    text-align: center;
+    
 }
