--- a/src/css/layout/header.css
+++ b/src/css/layout/header.css
@@ -7,9 +7,24 @@ header {
 .home-header {
     display: block;
     margin-left: 5%;
+    padding-top: 1%;
+}
+
+.language-header {
+    display: block;
+    margin-left: 2%;
+    margin-top: 15px;
+}
+
+.btb-header {
+    display: block;
+    margin: auto;
+    margin-top: 5%;
+    padding-bottom: 10%;
 }
 
 .menu-header {
-    display: block;
-    margin: auto;
+    display: flex;
+    margin-left: 313px;
+    margin-top: -48px;
 }
