--- a/src/css/base/main.css
+++ b/src/css/base/main.css
@@ -5,7 +5,7 @@
     box-sizing: border-box;
 }
 
-/* À propos */
+/* Header Variation */
 
 .round-header {
     display: block;
@@ -17,7 +17,116 @@
     color: #FFFFFF;
     font-family: 'Mulish', sans-serif;
     font-weight: 800;
-    font-size: 28;
     text-align: center;
-    
+
+}
+
+.element-header {
+    position: relative;
+    height: 10rem;
+    left: 35%;
+}
+
+.element-header-image {
+    position: absolute;
+}
+
+/* Variation Header 1*/
+
+.element-header-texte-1 {
+    position: absolute;
+    rotate: -6deg;
+    bottom: 72px;
+    right: 265px;
+    font-size: 12px;
+}
+
+/* Variation Header 2*/
+
+.element-header-texte-2 {
+    position: absolute;
+    rotate: -6deg;
+    bottom: 60px;
+    right: 258px;
+    font-size: 13px;
+}
+
+/* Variation Header 3*/
+
+.element-header-texte-3 {
+    position: absolute;
+    rotate: -6deg;
+    bottom: 71px;
+    right: 270px;
+    font-size: 13px;
+}
+
+/* Variation Header 4*/
+
+.element-header-texte-4 {
+    position: absolute;
+    rotate: -6deg;
+    bottom: 60px;
+    right: 260px;
+    font-size: 11px;
+}
+
+/* Variation Header 5*/
+
+.element-header-texte-5 {
+    position: absolute;
+    rotate: -6deg;
+    bottom: 70px;
+    right: 265px;
+    font-size: 13px;
+}
+
+/* Variation Header 6*/
+
+.element-header-texte-6 {
+    position: absolute;
+    rotate: -6deg;
+    bottom: 72px;
+    right: 263px;
+    font-size: 12px;
+}
+
+/* Variation Header 7*/
+
+.element-header-texte-7 {
+    position: absolute;
+    rotate: -6deg;
+    bottom: 72px;
+    right: 262px;
+    font-size: 11.5px;
+}
+
+/* Variation Header 8*/
+
+.element-header-texte-8 {
+    position: absolute;
+    rotate: -6deg;
+    bottom: 65px;
+    right: 262px;
+    font-size: 11px;
+}
+
+/* Variation Header 9*/
+
+.element-header-texte-9 {
+    position: absolute;
+    rotate: -6deg;
+    bottom: 62px;
+    right: 262px;
+    font-size: 11.5px;
+}
+
+/* Variation Header 10*/
+
+.element-header-texte-10 {
+    position: absolute;
+    rotate: -6deg;
+    bottom: 65px;
+    right: 260px;
+    font-size: 7.5px;
 }
