--- a/src/css/base/media.css
+++ b/src/css/base/media.css
@@ -9,10 +9,10 @@ img {
     margin-left: 21%;
     margin-top: 5%;
     margin-bottom: 5%;
-    background-color: #BE1C1C;
+    background-color: var(--rouge-clair);
     border-left: solid 4px;
     border-bottom: solid 4px;
-    border-color: #BE1C1C;
+    border-color: var(--rouge-clair);
     border-radius: 5%;
 }
 
@@ -21,31 +21,49 @@ img {
     margin-top: 5%;
     margin-bottom: 5%;
     margin-left: -4%;
-    background-color: #BE1C1C;
+    background-color: var(--rouge-clair);
     border-right: solid 4px;
     border-bottom: solid 4px;
-    border-color: #BE1C1C;
+    border-color: var(--rouge-clair);
     border-radius: 5%;
 }
 
 .boutton-right-article-fr {
-    background-color: #BE1C1C;
+    background-color: var(--rouge-clair);
     text-align: center;
     color: #FFFDFD;
     font-family: 'Mulish', sans-serif;
     font-size: 13px;
     font-weight: 400;
     border-radius: 5px;
-    border-color: #6E0D0D;
+    border-color: var(--rouge-fonce-fonce);
     position: absolute;
-    margin-top: -53px;
+    margin-top: -58px;
     margin-left: 95px;
     cursor: pointer;
-
+    height: 25px;
+    box-shadow: 0px 1.5px 5px black;
 }
 
-.boutton-right-article-fr:hover {
-    background-color: #6E0D0D;
+.boutton-left-article-fr {
+    background-color: var(--rouge-clair);
+    text-align: center;
+    color: #FFFDFD;
+    font-family: 'Mulish', sans-serif;
+    font-size: 13px;
+    font-weight: 400;
+    border-radius: 5px;
+    border-color: var(--rouge-fonce-fonce);
+    position: absolute;
+    margin-top: 183px;
+    margin-left: -100px;
+    cursor: pointer;
+    height: 25px;
+    box-shadow: 0px 1.5px 5px black;
+}
+
+button:hover {
+    background-color: var(--rouge-fonce-fonce);
   }
 /* Footer */
 
