--- a/src/css/utils/variables.css
+++ b/src/css/utils/variables.css
@@ -12,4 +12,6 @@
 --mulish-bold-18px: 1rem;
 --mulish-extra-bold-28px: 1.56rem;
 --rubik-extra-bold-70px: 3.89rem;
+
+--font-family-rubik : 'rubik'
 }
