--- a/src/css/base/main.css
+++ b/src/css/base/main.css
@@ -5,6 +5,10 @@
     box-sizing: border-box;
 }
 
+main {
+    width: 100%;
+}
+
 /* Page d'accueil FR */
 
 .intro-accueil-fr {
@@ -37,4 +41,10 @@
     margin-left: 2.5px;
     text-shadow: 0px 2.5px 2px black;
 
+}
+.btb-header-fr {
+    font-family: 'Rubik', sans-serif;
+    font-size: 70px;
+    font-weight: 800;
+    color: #FFFDFD;
 }
