--- a/src/css/base/media.css
+++ b/src/css/base/media.css
@@ -5,20 +5,21 @@ img {
 /* Page d'accueil FR*/
 
 .article-right-accueil-fr {
-    margin-left: 21%;
-    margin-top: 5%;
-    margin-bottom: 5%;
+    display: flex;
+    margin-left: 17.3%;
+    margin-top: 10%;
+    margin-bottom: 10%;
+    border-left:  solid 5px;
+    border-bottom: solid 5px;
     background-color: var(--rouge-clair);
-    border-left: solid 4px;
-    border-bottom: solid 4px;
     border-color: var(--rouge-clair);
-    border-radius: 5%;
+    border-radius: 5% 0 0 5%;
 }
 
 .article-left-accueil-fr {
     position: relative;
-    margin-top: 5%;
-    margin-bottom: 5%;
+    margin-top: 10%;
+    margin-bottom: 10%;
     margin-left: -4%;
     background-color: var(--rouge-clair);
     border-right: solid 4px;
@@ -37,8 +38,8 @@ img {
     border-radius: 5px;
     border-color: var(--rouge-fonce-fonce);
     position: absolute;
-    margin-top: -58px;
-    margin-left: 95px;
+    margin-top: -75px;
+    margin-left: 85px;
     cursor: pointer;
     height: 25px;
     box-shadow: 0px 1.5px 5px black;
@@ -54,7 +55,7 @@ img {
     border-radius: 5px;
     border-color: var(--rouge-fonce-fonce);
     position: absolute;
-    margin-top: 183px;
+    margin-top: 200px;
     margin-left: -100px;
     cursor: pointer;
     height: 25px;
