--- a/src/css/pages/style.css
+++ b/src/css/pages/style.css
@@ -14,3 +14,4 @@
 @import '/src/css/base/media.css';
 @import '/src/css/layout/footer.css';
 @import '/src/css/layout/header.css';
+@import '/src/css/layout/menu.css';
