--- a/src/css/base/main.css
+++ b/src/css/base/main.css
@@ -24,9 +24,8 @@ main {
     color: #FFFDFD;
     font-size: 18px;
     font-weight: 700;
-    left: 80px;
-    margin-top: -63%;
     text-shadow: 0px 2.5px 2px black;
+    opacity: 0;
 }
 
 .texte-article-left-accueil-fr {
@@ -34,11 +33,8 @@ main {
     color: #FFFDFD;
     font-size: 18px;
     font-weight: 700;
-    margin-top: -63%;
-    margin-right: 80px;
-    margin-left: 2.5px;
     text-shadow: 0px 2.5px 2px black;
-
+    opacity: 0;
 }
 .btb-header-fr {
     font-family: 'Rubik', sans-serif;
