--- a/src/css/base/main.css
+++ b/src/css/base/main.css
@@ -17,15 +17,20 @@ main {
     font-weight: 400;
     color: var(--gris-fonce);
     margin-inline: 5%;
+    display: flex;
+    margin-bottom: 10%;
+    margin-top: -10%;
 }
 
 .texte-article-right-accueil-fr {
+    display: flex;
     font-family: 'Mulish', sans-serif;
     color: #FFFDFD;
     font-size: 18px;
     font-weight: 700;
     text-shadow: 0px 2.5px 2px black;
-    opacity: 0;
+    margin-left: 20%;
+    margin-top: -54%;
 }
 
 .texte-article-left-accueil-fr {
@@ -34,7 +39,9 @@ main {
     font-size: 18px;
     font-weight: 700;
     text-shadow: 0px 2.5px 2px black;
-    opacity: 0;
+    margin-left: 2%;
+    margin-right: 20%;
+    margin-top: -54%;
 }
 .btb-header-fr {
     font-family: 'Rubik', sans-serif;
