--- a/src/css/layout/menu.css
+++ b/src/css/layout/menu.css
@@ -59,13 +59,13 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    transform: translateX(100vw);
+    transform: translateY(-300vw);
     transition: all 1s;
     z-index: 1;
 }
 
 .menu_fr_open .menu_fr {
-    transform: translateX(0);
+    transform: translateY(0);
 }
 
 .menu_fr_open,
