--- a/src/css/base/media.css
+++ b/src/css/base/media.css
@@ -6,6 +6,14 @@ main {
     max-width: 100%;
 }
 
+header {
+    max-width: 100%;
+}
+
+footer {
+    max-width: 100%;
+}
+
 /* Page d'accueil FR*/
 
 .article-right-accueil-fr {
@@ -78,6 +86,21 @@ button:hover {
 
 /* Film FR */
 
-.film_article_image_1 {
-    width: 100%;
+.film_article_image_primary {
+    width: 90%;
+    display: flex;
+    margin: auto;
+}
+
+.film_article_image_secondary {
+    width: 60%;
+    display: flex;
+    margin: auto;
+    margin-top: 10%;
+}
+
+.film_article_image_dual {
+    display: flex;
+    margin-left: 5%;
+    margin-right: 5%;
 }
