--- a/src/css/layout/header.css
+++ b/src/css/layout/header.css
@@ -8,6 +8,10 @@ header {
     width: 100%;
 }
 
+.header_fr_2 {
+    width: 100%;
+}
+
 .element_header_fr {
     display: flex;
     justify-content: space-between;
@@ -32,15 +36,15 @@ header {
     font-weight: 800;
     color: #FFFDFD;
     text-align: center;
-    margin-top: 5px;
-    padding-bottom: 10px;
+    margin-top: 5%;
+    padding-bottom: -5%;
 }
 
 /* Header Variation */
 
 .round-header {
     display: flex;
-    margin: auto;
+    margin-left: 100%;
 }
 
 .h1-header {
@@ -48,12 +52,14 @@ header {
     font-family: 'Mulish', sans-serif;
     font-weight: 800;
     text-align: center;
+    display: flex;
+    margin-left: 150%;
+    margin-bottom: -10%;
 }
 
 .element-header {
     position: relative;
     height: 10rem;
-    left: 35%;
 }
 
 .element-header-image {
@@ -65,8 +71,6 @@ header {
 .element-header-texte-1 {
     position: absolute;
     rotate: -6deg;
-    bottom: 72px;
-    right: 265px;
     font-size: 12px;
 }
 
