--- a/src/css/base/main.css
+++ b/src/css/base/main.css
@@ -170,3 +170,36 @@ main {
 .livre_article_texte_link {
     margin-inline: 5%;
 }
+
+/* Musique FR */
+
+.musique_article_intro {
+    font-family: 'Mulish', sans-serif;
+    font-size: 18px;
+    font-weight: 400;
+    color: var(--gris-fonce);
+    margin-inline: 5%;
+    margin-bottom: 10%;
+}
+
+.musique_article_texte_tittle {
+    font-family:  'Mulish', sans-serif;
+    font-size: 18px;
+    font-weight: 800;
+    color: var(--gris-fonce);
+    margin-inline: 5%;
+    margin-bottom: -1%;
+    margin-top: 10%;
+}
+
+.musique_article_texte_content {
+    font-family: 'Mulish', sans-serif;
+    font-size: 16px;
+    font-weight: 400;
+    color: var(--gris-fonce);
+    margin-inline: 5%;
+}
+
+.musique_article_texte_link {
+    text-align: center;
+}
