--- a/src/css/layout/header.css
+++ b/src/css/layout/header.css
@@ -149,9 +149,9 @@ header {
 .element-header-texte-9 {
     position: absolute;
     rotate: -6deg;
-    bottom: 62px;
-    right: 262px;
-    font-size: 11.5px;
+    bottom: 37%;
+    right: 73.5%;
+    font-size: 10px;
 }
 
 /* Variation Header 10*/
