--- a/src/css/layout/header.css
+++ b/src/css/layout/header.css
@@ -159,8 +159,8 @@ header {
 .element-header-texte-10 {
     position: absolute;
     rotate: -6deg;
-    bottom: 65px;
-    right: 260px;
+    bottom: 45%;
+    right: 78%;
     font-size: 7.5px;
 }
 
