Glossaire CSS FR

--- a/src/css/base/main.css
+++ b/src/css/base/main.css
@@ -333,3 +333,32 @@ main {
     text-decoration: none;
     text-align: center;
 }
+
+/* Glossaire FR */
+
+.glossaire_article_intro {
+    font-family: 'Mulish', sans-serif;
+    font-size: 18px;
+    font-weight: 400;
+    color: var(--gris-fonce);
+    margin-inline: 5%;
+    margin-bottom: 10%;
+}
+
+.glossaire_article_texte_tittle {
+    font-family:  'Mulish', sans-serif;
+    font-size: 16px;
+    font-weight: 800;
+    color: var(--gris-fonce);
+    margin-inline: 5%;
+    margin-bottom: -1%;
+    margin-top: 10%;
+}
+
+.glossaire_article_texte_content {
+    font-family: 'Mulish', sans-serif;
+    font-size: 16px;
+    font-weight: 400;
+    color: var(--gris-fonce);
+    margin-inline: 5%;
+}
