--- a/src/css/layout/header.css
+++ b/src/css/layout/header.css
@@ -79,8 +79,8 @@ header {
 .element-header-texte-2 {
     position: absolute;
     rotate: -6deg;
-    bottom: 60px;
-    right: 258px;
+    bottom: 45%;
+    right: 74%;
     font-size: 13px;
 }
 
