--- a/src/css/base/main.css
+++ b/src/css/base/main.css
@@ -403,3 +403,23 @@ main {
     margin-inline: 5%;
     text-align: center;
 }
+
+/* Contact FR */
+
+.contact_article_intro {
+    font-family: 'Mulish', sans-serif;
+    font-size: 18px;
+    font-weight: 400;
+    color: var(--gris-fonce);
+    margin-inline: 5%;
+    margin-bottom: 10%;
+}
+
+.contact_form_name {
+    font-family: 'Mulish', sans-serif;
+    font-size: 15px;
+    font-weight: 400;
+    color: var(--gris-fonce);
+    margin-bottom: 3%;
+    margin-left: 15%;
+}
