--- a/src/css/base/main.css
+++ b/src/css/base/main.css
@@ -381,6 +381,8 @@ main {
     color: var(--gris-fonce);
     margin-inline: 5%;
     text-align: center;
+    text-decoration: none;
+    margin-bottom: 6%;
 }
 
 .ap_article_texte_content_name {
