--- a/src/css/layout/menu.css
+++ b/src/css/layout/menu.css
@@ -109,3 +109,116 @@
 .menu_fr_open .menu_fr li:nth-child(n+8) { transition-delay: .65s;}
 .menu_fr_open .menu_fr li:nth-child(n+9) { transition-delay: .7s;}
 .menu_fr_open .menu_fr li:nth-child(n+10) { transition-delay: .75s;}
+
+/* EN */
+
+.nav_toogle {
+    width: 35px;
+    height: 35px;
+    position: absolute;
+    top: 23px;
+    right: 22px;
+    z-index: 2;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+}
+
+.nav_toogle_bar,
+.nav_toogle_bar::before,
+.nav_toogle_bar::after {
+    content: "";
+    background-color: var(--blanc);
+    width: 100%;
+    height: 5px;
+    position: absolute;
+    left: 0;
+    transition: all .4s ease-in-out;
+}
+
+.nav_toogle_bar::before {
+    top: 15px;
+}
+
+.nav_toogle_bar::after {
+    top: -15px;
+}
+
+.menu_en_open .nav_toogle_bar {
+    transform: rotate(135deg);
+    background-color: var(--blanc);
+}
+
+.menu_en_open .nav_toogle_bar::before,
+.menu_en_open .nav_toogle_bar::after {
+    transform: rotate(90deg);
+    background-color: var(--blanc);
+    top: 0;
+}
+
+
+
+/* MENU EN ON */
+
+.menu_en {
+    background-color: var(--rouge-fonce);
+    position: fixed;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transform: translateY(-300vw);
+    transition: all 1s;
+    z-index: 1;
+}
+
+.menu_en_open .menu_en {
+    transform: translateY(0);
+}
+
+.menu_en_open,
+.menu_en_open body {
+    overflow: hidden;
+}
+.menu_en ul {
+    list-style: none;
+    margin: 0;
+    margin-left: -25%;
+    padding: 0;
+    font-family: 'Rubik', sans-serif;
+    font-weight: 300;
+    font-size: 1.5rem;
+    color: var(--blanc);
+}
+
+.menu_en li {
+    margin-bottom: 20px;
+    transform: translateX(30px);
+    opacity: 0%;
+    transition: all .4s ease;
+}
+
+.menu_en a {
+    color: var(--blanc);
+    text-decoration: none;
+}
+
+.menu_en_open .menu_en li {
+    transform: translateX(0);
+    opacity: 100%;
+}
+
+.menu_en_open .menu_en li:nth-child(n+1) { transition-delay: .3s;}
+.menu_en_open .menu_en li:nth-child(n+2) { transition-delay: .35s;}
+.menu_en_open .menu_en li:nth-child(n+3) { transition-delay: .4s;}
+.menu_en_open .menu_en li:nth-child(n+4) { transition-delay: .45s;}
+.menu_en_open .menu_en li:nth-child(n+5) { transition-delay: .5s;}
+.menu_en_open .menu_en li:nth-child(n+6) { transition-delay: .55s;}
+.menu_en_open .menu_en li:nth-child(n+7) { transition-delay: .6s;}
+.menu_en_open .menu_en li:nth-child(n+8) { transition-delay: .65s;}
+.menu_en_open .menu_en li:nth-child(n+9) { transition-delay: .7s;}
+.menu_en_open .menu_en li:nth-child(n+10) { transition-delay: .75s;}
