--- a/src/css/layout/header.css
+++ b/src/css/layout/header.css
@@ -205,3 +205,15 @@ header {
     margin-top: 5%;
     padding-bottom: 5%;
 }
+
+/* State of emergency EN (Book)*/
+
+.h1-header-en {
+    color: #FFFFFF;
+    font-family: 'Mulish', sans-serif;
+    font-weight: 800;
+    text-align: center;
+    display: flex;
+    margin-left: 140%;
+    margin-bottom: -10%;
+}
