--- a/src/css/layout/header.css
+++ b/src/css/layout/header.css
@@ -242,3 +242,16 @@ header {
     margin-left: 180%;
     margin-bottom: -15%;
 }
+
+/* Glossary EN */
+
+.h1-header-glossary {
+    color: #FFFFFF;
+    font-family: 'Mulish', sans-serif;
+    font-weight: 800;
+    font-size: 24px;
+    text-align: center;
+    display: flex;
+    margin-left: 157%;
+    margin-bottom: -13%;
+}
